# Shazam-reimplementation

./: .clangd  .env  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6lm7ay05cvhm7p7gdycdljjr6c4i0jc4-source  m49wp6rq68wsc5nx62618lvrxk6bvgrv-source  x1b5lssppc4r9grcbvhm5r7yzgfmkmrk-source
.github/workflows/: cmake-multi-platform.yml
experiments/: 1mbmono_crits.csv  spectrogram.py  test.ini
experiments/Spectrogram_jd/: README  comparehashes.py  csvtoimg.py  overlayPts.py  plot2series.py  plothashes.py  scipys_answer.py  tocsv.py  tospectrogram.py
experiments/spectrogram/: frame.py  generate_matrix.py  main.py  multiply.py  stft.py  test.py  utils.py
experiments/tests/: avicci.py  gen_spect.py
include/: AudioFile.hpp  HashDumping.hpp  HashLoading.hpp  ParseConfig.hpp  SongIndexing.hpp  Spectrogram.hpp  Spotify.hpp  UnorderedMap.hpp  VirtualFile.hpp  YT.hpp  csvdumps.hpp  fft.hpp  search.hpp  utils.hpp
measurements/: README.md  analyze_statistics.py
measurements/Runs/: generate_info.py  result.json  runs.jsonc  z_gen.py
measurements/Runs/MINLIST_GTN_lax/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/MINLIST_GTN_lax_nfft/: description  settings.ini
measurements/Runs/MINLIST_GTN_lax_nfft/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/MINLIST_GTN_medium/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv  stay.mock
measurements/Runs/MINLIST_GTN_medium_nfft/: settings.ini
measurements/Runs/MINLIST_GTN_medium_nfft/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/MINLIST_GTN_nfft/: description  settings.ini
measurements/Runs/MINLIST_GTN_nfft/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/MINLIST_GTN_strict/: description
measurements/Runs/MINLIST_GTN_strict/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/MINLIST_large/: settings.ini
measurements/Runs/MINLIST_large/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/MINLIST_medium/: settings.ini
measurements/Runs/MINLIST_medium/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/MINLIST_small/: settings.ini
measurements/Runs/MINLIST_small/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/Z_MINLIST_GTN_lax/: description  settings.ini
measurements/Runs/Z_MINLIST_GTN_lax/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/Z_MINLIST_GTN_lax_nfft/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/Z_MINLIST_GTN_lax_nfft/hashes/: songs.csv
measurements/Runs/Z_MINLIST_GTN_medium/: description  settings.ini
measurements/Runs/Z_MINLIST_GTN_medium/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  -5dB_noise_searches.csv  output_samples_searches.csv  overview.txt  song_statistics.csv
measurements/Runs/Z_MINLIST_GTN_medium_nfft/: description
measurements/Runs/Z_MINLIST_GTN_medium_nfft/data/: -10dB_noise_searches.csv  -12.5dB_noise_searches.csv  -15dB_noise_searches.csv  -20dB_noise_searches.csv  overview.txt  (+3 more)
measurements/Runs/Z_MINLIST_GTN_strict/: settings.ini
measurements/Runs/Z_MINLIST_large/: description  settings.ini
measurements/Runs/Z_MINLIST_medium/: description
measurements/Runs/Z_MINLIST_small/: description  settings.ini
measurements/Runs/Z_fft_gtn1/: description  settings.ini
measurements/Runs/Z_gtn_thresh_0.7/: description  settings.ini
measurements/Runs/Z_gtn_thresh_1.2/: description
measurements/Runs/Z_gtn_thresh_1.8/: description  settings.ini
measurements/Runs/Z_minlist_nfft/: description  settings.ini
measurements/Runs/baseline/: description
measurements/Runs/example_run/: run.sh  settings.ini
measurements/Runs/fft_gtn2/: description  settings.ini
measurements/Runs/fft_gtn3/: description  settings.ini
measurements/Runs/gtn_thresh_1.2/: settings.ini
measurements/Runs/minlist_nfft/: settings.ini
measurements/tools/: noisify  randomsamples
scripts/: debian-clang.sh  deploy.sh  load_env.sh  rebuild.sh
src/: AudioFile.cpp  Features.cpp  ParseConfig.cpp  SongIndexing.cpp  Spectrogram.cpp  Spotify.cpp  api.cpp  fft.cpp  main.cpp
tests/: CMakeLists.txt  fft.cpp  result.cpp
(+178 files in other folders)
